--- a/agriculture-mall-product-consumer-dev.properties
+++ b/agriculture-mall-product-consumer-dev.properties
@@ -1,5 +1,5 @@
 
-eureka.instance.hostname=172.17.248.120
+eureka.instance.hostname=application
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
